--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,1 +1,215 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root {
+    --font: 'Inter', sans-serif;
+
+    --color-1: #ffffff;
+    --color-2: #000000;
+    --color-2-1: #000000a4;
+    --color-3: #595959;
+    --color-3-1: #6e6e6e;
+    --color-4: #fef15d;
+    --color-4-1: #fef15dd2;
+    --color-5: #455a64;
+    --color-5-1: #536e7a;
+    --color-5-2: #7293a3b6;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: var(--font);
+}
+
+html, body {
+    width: 96vw;
+    height: 98vh;
+    background-color: var(--color-3);
+}
+
+#container {
+    width: 90%;
+    height: 78%;
+    background-image: url(../animacao.svg);
+    background-repeat: no-repeat;
+    background-color: var(--color-1);
+    background-position: center center;
+    border-radius: 30px;
+    margin: auto;
+    margin-top: 10px;
+}
+
+#box-form {
+    background-color: #455a649d;
+    border-radius: 30px;
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 3em;
+    text-align: center;
+    color: var(--color-4);
+    margin-bottom: 10px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.432);
+}
+
+form {
+    width: 80%;
+    text-align: center;
+}
+
+.field label {
+    display: none;
+}
+
+.material-symbols-outlined {
+    position: absolute;
+    transform: translate(45%, 70%);
+    color: var(--color-5);
+}
+
+.data {
+    border: none;
+    background-color: #ffffff6e;
+    width: 100%;
+    height: 6vh;
+    margin-top: 10px;
+    border-radius: 30px;
+    outline: none;
+    padding: 0 0 0 40px;
+    font-weight: 600;
+}
+
+.data:focus-within {
+    background-color: var(--color-5-1);
+    color: var(--color-1);
+    transition: .5s;
+}
+
+::-webkit-input-placeholder {
+    color: var(--color-2);
+    font-weight: 700;
+}
+
+#recuperation {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 6px;
+}
+
+#iremember-label {
+    padding-left: 26px;
+}
+
+#recuperation a {
+    text-decoration: none;
+    color: var(--color-1);
+    font-size: .8em;
+}
+
+#recuperation a:hover {
+    color: var(--color-2);
+}
+
+#iremember {
+    display: none;
+}
+
+#iremember-label::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid var(--color-4);
+    border-radius: 50%;
+    background-color: var(--color-4);
+    position: absolute;
+    transform: translate(-110%, -6%);
+}
+
+#iremember:checked + #iremember-label::before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:serif='http://www.serif.com/' fill='%23455a64' width='16px' height='16px' viewBox='0 0 64 64' version='1.1' xml:space='preserve' style='fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;'%3E%3Cg transform='matrix(1,0,0,1,-576,-320)'%3E%3Crect id='Icons' x='0' y='0' width='1280' height='800' style='fill:none;'/%3E%3Cg id='Icons1' serif:id='Icons'%3E%3Cg id='Strike'%3E%3C/g%3E%3Cg id='H1'%3E%3C/g%3E%3Cg id='H2'%3E%3C/g%3E%3Cg id='H3'%3E%3C/g%3E%3Cg id='list-ul'%3E%3C/g%3E%3Cg id='hamburger-1'%3E%3C/g%3E%3Cg id='hamburger-2'%3E%3C/g%3E%3Cg id='list-ol'%3E%3C/g%3E%3Cg id='list-task'%3E%3C/g%3E%3Cg id='trash'%3E%3C/g%3E%3Cg id='vertical-menu'%3E%3C/g%3E%3Cg id='horizontal-menu'%3E%3C/g%3E%3Cg id='sidebar-2'%3E%3C/g%3E%3Cg id='Pen'%3E%3C/g%3E%3Cg id='Pen1' serif:id='Pen'%3E%3C/g%3E%3Cg id='clock'%3E%3C/g%3E%3Cg id='external-link'%3E%3C/g%3E%3Cg id='hr'%3E%3C/g%3E%3Cg id='info'%3E%3C/g%3E%3Cg id='warning'%3E%3C/g%3E%3Cg id='plus-circle'%3E%3C/g%3E%3Cg id='minus-circle'%3E%3C/g%3E%3Cg id='vue'%3E%3C/g%3E%3Cg id='cog'%3E%3C/g%3E%3Cg id='logo'%3E%3C/g%3E%3Cg id='radio-check'%3E%3C/g%3E%3Cg id='eye-slash'%3E%3C/g%3E%3Cg id='eye'%3E%3C/g%3E%3Cg id='toggle-off'%3E%3C/g%3E%3Cg id='shredder'%3E%3C/g%3E%3Cg id='spinner--loading--dots-' serif:id='spinner %5Bloading, dots%5D'%3E%3C/g%3E%3Cg id='react'%3E%3C/g%3E%3Cg id='check-selected'%3E%3C/g%3E%3Cg id='circle-filled' transform='matrix(1.70002,0,0,1.70002,-316.778,-246.387)'%3E%3Ccircle cx='543.992' cy='352' r='14.13'/%3E%3C/g%3E%3Cg id='turn-off'%3E%3C/g%3E%3Cg id='code-block'%3E%3C/g%3E%3Cg id='user'%3E%3C/g%3E%3Cg id='coffee-bean'%3E%3C/g%3E%3Cg transform='matrix(0.638317,0.368532,-0.368532,0.638317,785.021,-208.975)'%3E%3Cg id='coffee-beans'%3E%3Cg id='coffee-bean1' serif:id='coffee-bean'%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cg id='coffee-bean-filled'%3E%3C/g%3E%3Cg transform='matrix(0.638317,0.368532,-0.368532,0.638317,913.062,-208.975)'%3E%3Cg id='coffee-beans-filled'%3E%3Cg id='coffee-bean2' serif:id='coffee-bean'%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cg id='clipboard'%3E%3C/g%3E%3Cg transform='matrix(1,0,0,1,128.011,1.35415)'%3E%3Cg id='clipboard-paste'%3E%3C/g%3E%3C/g%3E%3Cg id='clipboard-copy'%3E%3C/g%3E%3Cg id='Layer1'%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#iremember-label {
+    cursor: pointer;
+}
+
+#button input {
+    width: 100%;
+    height: 6vh;
+    font-weight: 900;
+    font-size: 1.4em;
+    margin-top: 30px;
+    padding: 3px;
+    border-radius: 30px;
+    color: var(--color-5);
+    background-color: var(--color-4);
+    border: 2px solid var(--color-4);
+}
+
+#button input:hover {
+    color: var(--color-5);
+    font-size: 1.3em;
+    background-color: var(--color-4-1);
+    cursor: pointer;
+    transition: .2s;
+}
+
+footer {
+    color: var(--color-5-2);
+    display: flex;
+    width: 100vw;
+    height: 8%;
+    flex-direction: row;
+    text-align: center;
+    bottom: 0;
+    position: fixed;
+    background-color: var(--color-2-1);
+}
+
+footer div {
+    width: 14%;
+    margin: auto;
+    padding: 6px;
+}
+
+.big {
+    width: 43%;
+}
+
+footer div > p {
+    font-size: .5em;
+    width: 100%;
+}
+
+footer h3 {
+    font-weight: 500;
+    font-size: .8em;
+}
+
+footer a {
+    width: 80%;
+    text-decoration: none;
+    color: var(--color-3-1);
+    text-align: justify;
+    font-size: .5em;
+    padding: 14px;
+}
+
+footer a:hover {
+    color: var(--color-1);
+    transform-style: .2s;
+}
