--- a/Styles/media-queries.css
+++ b/Styles/media-queries.css
@@ -9,14 +9,24 @@ Desktop: de 992px até 1200px
 Grandes telas: acima de 1200px
 */
 
-@media screen and (min-width: 768.1px) and (max-width: 992px) {
+@media screen and (min-width: 768.1px) {
+    #container {
+        width: 760px;
+    }
 
-}
+    footer {
+        height: 17%;
+    }
 
-@media screen and (min-width: 992.1px) and (max-width:1200px) {
+    footer > p {
+        font-size: .8em;
+    }
 
-}
+    footer > h3 {
+        font-size: 1em;
+    }
 
-@media screen and (min-width:1200.1px) {
-
+    footer a {
+        font-size: .6em;
+    }
 }
