--- a/Styles/style.css
+++ b/Styles/style.css
@@ -28,6 +28,7 @@ html, body {
     width: 100vw;
     height: 98vh;
     background-color: var(--color-3);
+    overflow: hidden;
 }
 
 #container {
