Correção das media queries

--- a/Styles/media-queries.css
+++ b/Styles/media-queries.css
@@ -9,9 +9,19 @@ Desktop: de 992px até 1200px
 Grandes telas: acima de 1200px
 */
 
+@media screen and (min-width: 548px) and (max-width: 768px) {
+    .material-symbols-outlined {
+        transform: translate(50%, 86%);
+    }
+}
+
 @media screen and (min-width: 768.1px) {
     #container {
-        width: 760px;
+        width: 580px;
+    }
+
+    .material-symbols-outlined {
+        transform: translate(50%, 70%);
     }
 
     footer {
